fix stretching of images

--- a/src/scss/pages/GalleryCategory.scss
+++ b/src/scss/pages/GalleryCategory.scss
@@ -1,7 +1,9 @@
 #Gallery{
-
+  img {
+    object-fit: cover;
+  }
 }
 
 .clearfix{
-  
+
 }
